# FInal_Proj_Environmental_Setup

./: project_description.txt
pothole-wireframe-rt/: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
pothole-wireframe-rt/configs/: camera.yaml  dataset.yaml  depth_midas.yaml  detection_yolov8.yaml  reconstruction.yaml
pothole-wireframe-rt/data/: processed  raw
pothole-wireframe-rt/docs/: api.md  architecture.md  setup.md
pothole-wireframe-rt/notebooks/: evaluation.ipynb  exploration.ipynb
pothole-wireframe-rt/scripts/: benchmark.py  calibrate_camera.py  download_weights.py  run_realtime.py  train_yolo.py
pothole-wireframe-rt/src/: app.py
pothole-wireframe-rt/src/pipeline/: __init__.py
pothole-wireframe-rt/src/pipeline/capture/: __init__.py  camera.py
pothole-wireframe-rt/src/pipeline/decision/: __init__.py  engine.py
pothole-wireframe-rt/src/pipeline/depth/: __init__.py  depthanything_v2.py  midas.py
pothole-wireframe-rt/src/pipeline/detection/: __init__.py  yolov8_seg.py
pothole-wireframe-rt/src/pipeline/fusion/: __init__.py  pointcloud.py
pothole-wireframe-rt/src/pipeline/geometry/: __init__.py  measurements.py
pothole-wireframe-rt/src/pipeline/io/: __init__.py  export.py  logger.py
pothole-wireframe-rt/src/pipeline/preprocess/: __init__.py  transforms.py
pothole-wireframe-rt/src/pipeline/reconstruction/: __init__.py  mesh.py
pothole-wireframe-rt/src/types/: __init__.py
pothole-wireframe-rt/tests/: __init__.py  test_depth.py  test_detection.py  test_geometry.py  test_pipeline.py
(+6 files in other folders)
